--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "marked": "^16.1.1",
     "next": "15.4.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
